fixed list alignment issue and current MVP

--- a/client/styles.css
+++ b/client/styles.css
@@ -187,7 +187,7 @@ option {
   margin: 15px auto 10px auto;
   width: 95%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   justify-content: center;
   align-content: center;
   font-family: Source Sans Pro, Geneva, sans-serif;
@@ -292,4 +292,10 @@ option {
 .modalButton:active {
   color: #f1f1f1;
   transition-duration: 0.2s;
+}
+
+.mainList {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
